Corrección después de la base de datos
